c4prj2_input/grade.txt
Grading at Thu Sep  6 15:40:28 UTC 2018
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:22:32: error: ‘n’ undeclared (first use in this function)
  char * chN = malloc(2*sizeof(*n));
                                ^
input.c:22:32: note: each undeclared identifier is reported only once for each function it appears in
Compilation of input.c failed

Overall Grade: F
